<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:id="@+id/diving"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:visibility="gone"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:id="@+id/linMoreContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/loadmore_more"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linMoreLoading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ProgressBar
                android:visibility="visible"
                android:id="@+id/imgLoading"
                android:indeterminateDrawable="@drawable/rvkit_widget_progress_gray"
                android:indeterminate="true"
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/loading_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:gravity="center"
                android:textSize="@dimen/loadmore_big_size"
                android:text="@string/loadmore_more_loading"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linMoreFail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="@dimen/loadmore_big_size"
            android:gravity="center"
            android:text="@string/loadmore_retry"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linMoreEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="@dimen/loadmore_big_size"
            android:gravity="center"
            android:text="@string/loadmore_end"/>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/linMoreEmpty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textMoreEmpty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="@dimen/loadmore_big_size"
            android:gravity="center"
            android:text="@string/loadmore_empty"/>
    </LinearLayout>

</LinearLayout>
